<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_smartphone_black_24dp"
            android:title="@string/menu_Login" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/menu_payments" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_SignUp"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_SignUp" />

            <item
                android:id="@+id/nav_ContactUs"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/menu_ContactUs" />

            <item
                android:id="@+id/nav_AboutUs"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_AboutUs" />



        </menu>
    </item>

</menu>
